--- a/www/website.html
+++ b/www/website.html
@@ -1,3 +1,18 @@
-<script type="module" src="website.js"></script>
+<!DOCTYPE html>
+<head>
+  <title>IA Item Downloader</title>
+  <meta charset="UTF-8">
+  <link href="https://esm.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <script type="module" src="website.js"></script>
+</head>
 
-<button id="dir-sel">select directory</button>
+<body style="margin: 25px">
+
+  <h1>Instant CI/CD</h1>
+
+  <button id="dir-sel" class="btn btn-primary">select directory</button>
+
+  <div id="info" class="card card-body bg-light"></div>
+
+  <div id="msgs" class="card card-body bg-light"></div>
+</body>
