--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <link href="https://esm.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <body style="margin:20px">
 <center>
-<h1>prevu</h1>
+<h1>coderunr</h1>
 
 <img style="max-width:80%; height:auto"
   src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Multiplexing_diagram.svg/800px-Multiplexing_diagram.svg.png">
 
 <p>
-  Take a look at the main <a href="https://internetarchive.github.io/prevu">prevu git repo</a>.
+  Take a look at the main <a href="https://internetarchive.github.io/coderunr">coderunr git repo</a>.
 </p>
 
 <hr>
