--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,12 @@
-<link href="https://esm.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<!doctype html>
+<html lang="en">
+<head>
+  <link href="https://esm.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+</head>
 <body style="margin:20px">
 <center>
 <h1>coderunr</h1>
+<h1>₀₀₀₁₀₁  ᕕ( ᐛ )ᕗ</h1>
 
 <img style="max-width:80%; height:auto"
   src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Multiplexing_diagram.svg/800px-Multiplexing_diagram.svg.png">
@@ -20,3 +25,4 @@
   </i>
 </div>
 </body>
+</html>
