--- a/www/website.html
+++ b/www/website.html
@@ -2,7 +2,7 @@
 <head>
   <title>Instant CI/CD</title>
   <meta charset="UTF-8">
-  <link href="https://esm.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="https://esm.ext.archive.org/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <script type="module" src="website.js"></script>
 </head>
 
